route for user update and regex for email and username
